--- a/src/main/webapp/lab/administration.xhtml
+++ b/src/main/webapp/lab/administration.xhtml
@@ -14,53 +14,85 @@
                         <div class="col-3"> 
 
                             <p:accordionPanel>
-                                <p:tab title="Manage Items" rendered="#{webUserController.hasPrivilege('LabItems')}">
+                                <p:tab title="Manage Investigations">
                                     <h:form>
                                         <div class="d-grid gap-2">
-                                            <p:commandButton  class="w-100 "  ajax="false" value="Categories" action="/lab/investigation_category"  />
-                                            <p:commandButton  class="w-100 "  ajax="false" value="Tubes" action="/lab/investigation_tube"  />
-                                            <p:commandButton  class="w-100 "  ajax="false" value="Speciman" action="/lab/investigation_speciman"  />
-                                            <p:commandButton  class="w-100 "  ajax="false" value="Investigations" action="#{investigationController.toManageInvestigationDetails()}"  />
-                                            <p:commandButton  class="w-100 "  ajax="false" value="Analyzers" action="/lab/machine"  />
-                                            <p:commandButton  class="w-100 "  ajax="false" value="Analyzer Tests" action="/lab/analyzer_test"  />
-                                            <p:commandButton  class="w-100 "  ajax="false" value="Sample Components" action="/lab/sample_component"  />
-                                            <p:commandButton  class="w-100 "  ajax="false" value="Investigation Fees" action="/lab/investigation_fee"  rendered="#{webUserController.hasPrivilege('LabInvestigationFee')}"/>
-                                            <p:commandButton  class="w-100 "  ajax="false" value="Replaceable Investigations" action="/lab/replaceable_ix"  />
-                                            <p:commandButton  class="w-100 "  ajax="false" value="Investigation Items" action="/lab/investigation_values"  />
+                                            <p:commandButton 
+                                                class="w-100" 
+                                                ajax="false"
+                                                value="Add New Investigation" 
+                                                action="#{investigationController.prepareAdd()}" 
+                                                >
+                                            </p:commandButton>
+                                            <p:commandButton 
+                                                class="w-100" 
+                                                ajax="false" 
+                                                value="Investigation List" 
+                                                action="#{investigationController.navigateToListInvestigation()}" />
+                                            <p:commandButton 
+                                                class="w-100"
+                                                ajax="false" 
+                                                value="Investigations" 
+                                                action="#{investigationController.toManageInvestigationDetails()}" />
+                                            <p:commandButton class="w-100" ajax="false" value="Investigation Categories" action="/lab/investigation_category" />
+                                            <p:commandButton class="w-100" ajax="false" value="Investigation Items" action="/lab/investigation_values" />
+                                            <p:commandButton class="w-100" ajax="false" value="Replaceable Investigations" action="/lab/replaceable_ix" />
+                                            <p:commandButton class="w-100" ajax="false" value="Investigation Fees" action="/lab/investigation_fee" rendered="#{webUserController.hasPrivilege('LabInvestigationFee')}"/>
                                         </div>
                                     </h:form>
                                 </p:tab>
-                                <p:tab title="Manage Reports">
-                                    <h:form>
-                                        <h:panelGroup  rendered="#{webUserController.hasPrivilege('LabReports')}" >
-                                            <div class="d-grid gap-2">
-                                                <p:commandButton  class="w-100 "  ajax="false" value="Report Format Categories" action="/lab/report_format_category"  />
-                                                <p:commandButton  class="w-100 "  ajax="false" value="Report Formats" rendered="#{webUserController.hasPrivilege('LabReportFormatEditing')}" action="/lab/report_format"  />
-                                                <p:commandButton  class="w-100 "  ajax="false" value="Investigation Formats" rendered="#{webUserController.hasPrivilege('LabReportFormatEditing')}" action="#{investigationItemController.toEditInvestigationFormat()}"  />
-                                                <p:commandButton  class="w-100 "  ajax="false" value="Field Values" action="/lab/investigation_item_value"  />
-                                                <p:commandButton  class="w-100 "  ajax="false" value="Pathology Templates" action="/lab/investigation_item_value_path"  />
 
-                                                <p:commandButton  class="w-100 "  ajax="false" value="Flags" action="/lab/flags"  />
-                                                <p:commandButton  class="w-100 "  ajax="false" value="Calculations" action="/lab/calculation"  />
-                                                <p:commandButton  class="w-100 "  ajax="false" value="Dynamic Labels" action="/lab/dynamic_labels"  />
-                                                <p:commandButton  class="w-100 "  ajax="false" value="Validators" action="/lab/investigation_value_component"  />
-                                                <p:commandButton  class="w-100 "  ajax="false" value="Antibiotics" action="/lab/antibiotic"  />
-                                                <p:commandButton  class="w-100 "  ajax="false" value="Report Existing" action="/reportLab/investigation_existing"  />
+                                <p:tab title="Lab Configuration">
+                                    <h:form>
+                                        <div class="d-grid gap-2">
+                                            <p:commandButton class="w-100" ajax="false" value="Specimen Management" action="/lab/investigation_speciman" />
+                                            <p:commandButton class="w-100" ajax="false" value="Tubes Management" action="/lab/investigation_tube" />
+                                            <p:commandButton class="w-100" ajax="false" value="Analyzers" action="/lab/machine" />
+                                            <p:commandButton class="w-100" ajax="false" value="Analyzer Tests" action="/lab/analyzer_test" />
+                                            <p:commandButton class="w-100" ajax="false" value="Sample Components" action="/lab/sample_component" />
+                                        </div>
+                                    </h:form>
+                                </p:tab>
+
+                                <p:tab title="Manageme Reports">
+                                    <h:form>
+                                        <h:panelGroup rendered="#{webUserController.hasPrivilege('LabReports')}">
+                                            <div class="d-grid gap-2">
+                                                <p:commandButton 
+                                                    class="w-100" 
+                                                    ajax="false" 
+                                                    value="Report Format Names" 
+                                                    action="#{investigationController.navigateToListInvestigation()}"
+                                                    rendered="#{webUserController.hasPrivilege('LabReportFormatEditing')}"/>
+                                                <p:commandButton 
+                                                    class="w-100" 
+                                                    ajax="false" 
+                                                    value="Report Format Templates" 
+                                                    action="/lab/report_format_category" />
+                                                <p:commandButton 
+                                                    class="w-100" 
+                                                    ajax="false" 
+                                                    value="Investigation Formats" 
+                                                    action="#{investigationItemController.toEditInvestigationFormat()}" 
+                                                    rendered="#{webUserController.hasPrivilege('LabReportFormatEditing')}"/>
+
                                             </div>
                                         </h:panelGroup>
                                     </h:form>
                                 </p:tab>
-                                <p:tab title="Lists">
-                                <h:form>
-                                    <h:panelGroup rendered="#{webUserController.hasPrivilege('LabLists')}">
-                                      <div class="d-grid gap-2">
-                                        <p:commandButton  class="w-100 "  ajax="false" value="Lab Investigation List" action="/lab/investigation_list"  />
-                                        <p:commandButton  class="w-100 "  ajax="false" value="Lab Investigation List by Category" action="/lab/investigation_list_by_category"  />
-                                      </div>
-                                    </h:panelGroup>
-                                </h:form>
+
+                                <p:tab title="Lab Lists">
+                                    <h:form>
+                                        <h:panelGroup rendered="#{webUserController.hasPrivilege('LabLists')}">
+                                            <div class="d-grid gap-2">
+
+                                                <p:commandButton class="w-100" ajax="false" value="Investigation List by Category" action="/lab/investigation_list_by_category" />
+                                            </div>
+                                        </h:panelGroup>
+                                    </h:form>
                                 </p:tab>
-                                <p:tab title="SMS">
+
+                                <p:tab title="SMS Messaging">
                                     <p:panelGrid columns="2" styleClass="alignTop" rendered="#{webUserController.hasPrivilege('LabSetUp')}">
                                         <p:outputLabel value="Number" ></p:outputLabel>
                                         <p:inputText value="#{patientReportController.smsNumber}" ></p:inputText>
@@ -68,25 +100,25 @@
                                         <p:outputLabel value="Message" ></p:outputLabel>
                                         <p:inputText value="#{patientReportController.smsMessage}" ></p:inputText>
 
-
-                                        <p:commandButton  class="w-100 m-2 p-2"  ajax="false" value="Send" 
-                                                          action="#{patientReportController.sendSms()}" />
-
+                                        <p:commandButton class="w-100 m-2 p-2" ajax="false" value="Send Message" action="#{patientReportController.sendSms()}" />
                                     </p:panelGrid>
                                 </p:tab>
 
-                                <p:tab title="Setup">
-                                  <h:form>
-                                    <h:panelGroup rendered="#{webUserController.hasPrivilege('LabSetUp')}">
-                                        <p:commandButton  class="w-100 m-2 p-2"  ajax="false" value="Report Samples" actionListener="#{investigationController.listAllIxs}" action="/lab/report_samples"  />
-                                        <p:commandButton  class="w-100 m-2 p-2"  ajax="false" value="Report Dynamic Lables" action="/lab/report_dynamic_lables"  />
-                                        <p:commandButton  class="w-100 m-2 p-2"  ajax="false" value="Upload Ix" action="#{investigationItemController.toUploadJsonToCreateAnInvestigation()}" />
-                                        <p:commandButton  class="w-100 m-2 p-2"  ajax="false" value="Developer" action="/lab/setup" />
-                                    </h:panelGroup>
-                                  </h:form>
+                                <p:tab title="Lab Setup">
+                                    <h:form>
+                                        <h:panelGroup rendered="#{webUserController.hasPrivilege('LabSetUp')}">
+                                            <div class="d-grid gap-2">
+                                                <p:commandButton class="w-100 m-2 p-2" ajax="false" value="Report Samples" actionListener="#{investigationController.listAllIxs}" action="/lab/report_samples" />
+                                                <p:commandButton class="w-100 m-2 p-2" ajax="false" value="Dynamic Labels" action="/lab/report_dynamic_lables" />
+                                                <p:commandButton class="w-100 m-2 p-2" ajax="false" value="Upload Investigation" action="#{investigationItemController.toUploadJsonToCreateAnInvestigation()}" />
+                                                <p:commandButton class="w-100 m-2 p-2" ajax="false" value="Developer" action="/lab/setup" />
+                                            </div>
+                                        </h:panelGroup>
+                                    </h:form>
                                 </p:tab>
 
                             </p:accordionPanel>
+
                         </div>
                         <div class="col-9">  
                             <ui:insert name="subcontent" >
