--- a/src/main/webapp/lab/investigation_list_for_export.xhtml
+++ b/src/main/webapp/lab/investigation_list_for_export.xhtml
@@ -18,10 +18,6 @@
                 <p:commandButton id="excelExport" ajax="false" value="Download for Export" class="m-2" icon="pi pi-file-excel">
                     <p:dataExporter target="tbl" type="csv" fileName="List of All Investigations" />
                 </p:commandButton>
-                <p:commandButton id="excelDetails" ajax="false" value="Download for Details" class="m-2" icon="pi pi-file-excel">
-                    <p:dataExporter target="tbl" type="csv" fileName="List of All Investigations" />
-                </p:commandButton>
-
 
                 <p:dataTable id="tbl" 
                              rowIndexVar="rowIndex" 
@@ -35,18 +31,37 @@
                     <p:column headerText="Name" sortBy="#{ix.name}" filterBy="#{ix.name}" filterMatchMode="contains">
                         <h:outputLabel value="#{ix.name}" ></h:outputLabel>
                     </p:column>
+                    <p:column headerText="Printing Name" sortBy="#{ix.printName}" filterBy="#{ix.printName}" filterMatchMode="contains">
+                        <h:outputLabel value="#{ix.printName}" ></h:outputLabel>
+                    </p:column>
+                    <p:column headerText="Full Name" sortBy="#{ix.fullName}" filterBy="#{ix.fullName}" filterMatchMode="contains">
+                        <h:outputLabel value="#{ix.fullName}" ></h:outputLabel>
+                    </p:column>
                     <p:column headerText="Code" sortBy="#{ix.code}" filterBy="#{ix.code}" filterMatchMode="contains">
                         <h:outputLabel value="#{ix.code}" ></h:outputLabel>
                     </p:column>
                     <p:column headerText="Category" sortBy="#{ix.category.name}" filterBy="#{ix.category.name}" filterMatchMode="contains">
                         <h:outputLabel value="#{ix.category.name}" ></h:outputLabel>
                     </p:column>
-                    <p:column headerText="Institution" sortBy="#{ix.institution.name}" filterBy="#{ix.institution.name}" filterMatchMode="contains">
-                        <h:outputLabel value="#{ix.institution.name}" ></h:outputLabel>
+                    <p:column headerText="Sample" sortBy="#{ix.sample.name}" filterBy="#{ix.sample.name}" filterMatchMode="contains">
+                        <h:outputLabel value="#{ix.sample.name}" ></h:outputLabel>
                     </p:column>
-                    <p:column headerText="Department" sortBy="#{ix.department.name}" filterBy="#{ix.department.name}" filterMatchMode="contains">
-                        <h:outputLabel value="#{ix.department.name}" ></h:outputLabel>
+                    <p:column headerText="Container" sortBy="#{ix.investigationTube.name}" filterBy="#{ix.investigationTube.name}" filterMatchMode="contains">
+                        <h:outputLabel value="#{ix.investigationTube.name}" ></h:outputLabel>
                     </p:column>
+                    <p:column headerText="Analyzer" sortBy="#{ix.machine.name}" filterBy="#{ix.machine.name}" filterMatchMode="contains">
+                        <h:outputLabel value="#{ix.machine.name}" ></h:outputLabel>
+                    </p:column>
+                    <p:column headerText="Priority" sortBy="#{ix.priority}" filterBy="#{ix.priority}" filterMatchMode="contains">
+                        <h:outputLabel value="#{ix.priority}" ></h:outputLabel>
+                    </p:column>
+                    <p:column headerText="Report Template Type" sortBy="#{ix.reportType}" filterBy="#{ix.reportType}" filterMatchMode="contains">
+                        <h:outputLabel value="#{ix.reportType}" ></h:outputLabel>
+                    </p:column>
+                     <p:column headerText="Report Template" sortBy="#{ix.reportFormat.name}" filterBy="#{ix.reportFormat.name}" filterMatchMode="contains">
+                         <h:outputLabel value="#{ix.reportFormat.name}" ></h:outputLabel>
+                    </p:column>
+                    
                     <p:column headerText="Price" sortBy="#{ix.total}" style="text-align: right; padding-right: 20px;">
                         <h:outputLabel value="#{ix.total}" >
                             <f:convertNumber pattern="#,##0.00" ></f:convertNumber>
