--- a/src/main/webapp/lab/manage_investigation.xhtml
+++ b/src/main/webapp/lab/manage_investigation.xhtml
@@ -10,9 +10,9 @@
         <ui:composition template="/lab/administration.xhtml">
             <ui:define name="subcontent">
                 <h:panelGroup >
-                    <h:form id="form"  >
+                    <h:form >
                         <p:growl />
-                        <p:panel id="detailPan" >
+                        <p:panel id="detailPan"  >
                             <f:facet name="header" >
                                 <h:outputLabel value="Details - " ></h:outputLabel>
                                 <h:outputLabel value="Active" rendered="#{!investigationController.current.inactive}" style="color: green;"></h:outputLabel>
@@ -24,11 +24,18 @@
                                 <p:defaultCommand target="btnSave"/>
                             </f:facet>
 
-                            <p:tabView class="w-100" id="gpDetail" >
+                            <p:tabView 
+                                class="w-100" 
+                                id="gpDetail" 
+                                activeIndex="#{patientInvestigationController.activeIndexOfManageInvestigation}">
+                                <p:ajax event="tabChange" process="@this" ></p:ajax>
                                 <p:tab title="Basic Details">
                                     <p:panelGrid id="gpDetailText" columns="2" class="w-100">
                                         <h:outputText id="lblName" value="Name" ></h:outputText>
-                                        <p:inputText class="w-100"  autocomplete="off" id="txtName" 
+                                        <p:inputText class="w-100"  
+                                                     autocomplete="off" 
+                                                     id="txtName" 
+                                                     required="true"
                                                      value="#{investigationController.current.name}"  ></p:inputText>
                                         <h:outputText id="lblAddress" value="Printing Name" ></h:outputText>
                                         <p:inputText class="w-100"  autocomplete="off" id="txtAddress"  
@@ -40,7 +47,12 @@
                                         <p:inputText class="w-100" autocomplete="off" value="#{investigationController.current.code}"/>
 
                                         <h:outputText value="Category" ></h:outputText>
-                                        <p:selectOneMenu class="w-100" id="cmbCat"   value="#{investigationController.current.investigationCategory}" >
+                                        <p:selectOneMenu 
+                                            class="w-100" 
+                                            id="cmbCat"   
+                                            value="#{investigationController.current.investigationCategory}"
+                                            required="true"
+                                            >
                                             <f:selectItem itemLabel="Please select a category"/>
                                             <f:selectItems value="#{investigationCategoryController.items}" var="cat" itemLabel="#{cat.name}" itemValue="#{cat}" />
                                         </p:selectOneMenu>
@@ -64,13 +76,13 @@
                                             <f:selectItem itemLabel="Not Set" ></f:selectItem>
                                             <f:selectItems value="#{enumController.priorities}" ></f:selectItems>
                                         </p:selectOneMenu>
-                                        <p:outputLabel value="Report Category"/>
+                                        <p:outputLabel value="Report Template Type"/>
                                         <p:selectOneMenu class="w-100" value="#{investigationController.current.reportType}" >                               
                                             <f:selectItem itemLabel="General" itemValue="General"/>
                                             <f:selectItem itemLabel="Microbiology" itemValue="Microbiology"/>
                                             <f:selectItem itemLabel="Pathology / Haematology" itemValue="PathologyOrHaematology"/>
                                         </p:selectOneMenu>
-                                        <h:outputText value="Report Format" ></h:outputText>
+                                        <h:outputText value="Report Template" ></h:outputText>
                                         <p:selectOneMenu class="w-100" id="cmbRf"  value="#{investigationController.current.reportFormat}" >
                                             <f:selectItems value="#{reportFormatController.items}" var="rf1" itemLabel="#{rf1.name}" itemValue="#{rf1}" />
                                         </p:selectOneMenu>
