--- a/src/main/webapp/pharmacy/pharmacy_pharmaceutical_item_category.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_pharmaceutical_item_category.xhtml
@@ -67,7 +67,7 @@
 
                             <h:panelGroup id="gpDetail">
                                 <div class="form-group row">
-                                    <label for="txtName" class="col-sm-2 col-form-label">Name</label>
+                                    <label for="txtName" class="col-sm-2 col-form-label">Dosage Form</label>
                                     <div class="col-sm-10">
                                         <p:inputText autocomplete="off" id="txtName" value="#{pharmaceuticalItemCategoryController.current.name}" styleClass="form-control"></p:inputText>
                                     </div>
@@ -81,7 +81,7 @@
                                 <div class="form-group row">
                                     <label for="txtDes" class="col-sm-2 col-form-label">Description</label>
                                     <div class="col-sm-10">
-                                        <p:inputTextarea id="txtDes" value="#{pharmaceuticalItemCategoryController.current.descreption}" styleClass="form-control"></p:inputTextarea>
+                                        <p:inputTextarea id="txtDes" value="#{pharmaceuticalItemCategoryController.current.description}" styleClass="form-control"></p:inputTextarea>
                                     </div>
                                 </div>
                                 <div class="form-group row">
